--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,157 @@
-styles.css
+﻿
+/***** Base Styles *****/
+body {
+	text-align: left;
+	color: black;
+	box-sizing: border-box;
+	font-family: Times, 
+
+}
+
+
+h1 {
+	text-align: center;
+}
+/*** Sections ****/
+.section1, .section2, .section3 {
+	margin: 10px;
+	background-color: gray;
+	width: 100%;
+}
+.section1 {
+	border: 2px black;
+	text-align: left;
+}
+
+.section2 {
+	color: red;
+	
+}
+
+.section3 {
+	color: black;
+	
+}
+
+/*** Section Titles ****/
+.section1_title, .section2_title, .section3_title {
+	margin: 0px;
+	padding: 0px 10px 0px 0px;
+	width: 20%;
+	text-align: center;
+	float: right;
+	clear: right left;
+
+}
+.section1_title {
+	border: 1px solid black;
+	background-color: pink;
+}
+
+.section2_title {
+	border: 1px solid black;
+	background-color: red;
+	color: black;
+}
+
+.section3_title {
+	border: 1px solid black;
+	background-color: yellow;
+}
+
+/*** Section text ****/
+.sectiontext1 {
+	text-align: left;
+	color: black;
+	float: left;
+	padding: 10px;
+}
+
+
+/********** Large devices only **********/
+@media (min-width: 1200px) {
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+    border: 1px solid black;
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
+
+  /********** Medium devices only **********/
+@media (min-width: 992px) and (max-width: 1199px) {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+    border: 1px solid green;
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}
+}
