--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,67 @@
 ﻿
+/*****CSS file for Coursera Module 2 ******/
 /***** Base Styles *****/
-body {
-	text-align: left;
-	color: black;
-	box-sizing: border-box;
-	font: 16px Times ;
+* {
+  box-sizing: border-box;
+  font-family: Helvetica, Times;
 }
-
 h1 {
-	text-align: center;
-	font-size: 1.75em;
+  margin-bottom: 15px;
+  text-align: center;
+  size: 1.75em;
 }
 
-/*** Sections ****/
-.section1, .section2, .section3 {
-	margin: 10px;
-	background-color: gray;
-	width: 100%;
+p {
+  width: 90%;
+  height: 20%;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 25px;
+  color: white;
 }
-.section1 {
-	border: 2px black;
-	text-align: left;
+div {
+	display: block;
 }
-.section2 {
-	color: red;
-}
-.section3 {
-	color: black;
+div.col-lg-4 {
+	margin: 1%;
 }
 
-/*** Section Titles ****/
-.section1_title, .section2_title, .section3_title {
-	margin: 0px;
-	padding: 0px 10px 0px 0px;
-	width: 30%;
-	text-align: center;
+/* Simple Responsive Framework. */
+.row {
+  width: 100%;
+  position: relative;
+}
+.title1, .title2, .title3 {
+	size: 1.25em;
+}
+.title1 {
+	width: 80px;
+	background: #FFC0CB;
 	float: right;
-	clear: right left;
-	font-size: 1.25em;
-}
-.section1_title {
-	border: 1px solid black;
-	background-color: pink;
-}
-.section2_title {
-	border: 1px solid black;
-	background-color: red;
+	text-align: center;
 	color: white;
 }
-.section3_title {
-	border: 1px solid black;
-	background-color: yellow;
+.title2{
+	width: 80px;
+	background: #FF0000;
+	float: right;
+	text-align: center;
+	color: white;
 }
-
-/*** Section text ****/
-.sectiontext1 {
-	text-align: left;
-	color: black;
-	float: left;
-	padding: 10px;
+.title3 {
+	width: 80px;
+	background: #FFFF00;
+	float: right;
+	text-align: center;
+	color: #000000;
 }
-
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
     border: 1px solid black;
+    background-color: gray;
+    margin: 1%;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -77,7 +73,7 @@ h1 {
     width: 25%;
   }
   .col-lg-4 {
-    width: 33.33%;
+    width: 31%;
   }
   .col-lg-5 {
     width: 41.66%;
@@ -103,5 +99,95 @@ h1 {
   .col-lg-12 {
     width: 100%;
   }
+}
 
-  
+/********** Medium devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+ 	float: left;
+    border: 1px solid black;
+    background-color: gray;
+    margin: 1%;
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 48%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 98%;
+  }
+}
+/********** Small devices only **********/
+@media (max-width: 767px) {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+	float: left;
+    border: 1px solid black;
+    background-color: gray;
+    margin: 2%;
+  }
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 74.99%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
+    width: 98%;
+  }
+}
